feat(ui): base graph view
