# engine/internal/httpapi/workflow_instances_handlers.go
@@ -30,7 +30,7 @@ func (h *WorkflowInstancesHandlers) Register(rg *gin.RouterGroup) {
 // @Tags 		Workflow Instances
 // @Produce 	json
 // @Success 	200 {array} models.WorkflowInstance
-// @Router 		/workflow-instances [get]
+// @Router 		/api/workflow-instances [get]
 func (h *WorkflowInstancesHandlers) getAll(ctx *gin.Context) {
 	paginate := utils.Paginate(ctx)
 	defs, err := h.service.GetAll(&paginate)
@@ -49,7 +49,7 @@ func (h *WorkflowInstancesHandlers) getAll(ctx *gin.Context) {
 // @Produce 	json
 // @Param 		id path string true "Workflow Instance ID"
 // @Success 	200 {object} models.WorkflowInstance
-// @Router 		/workflow-instances/{id} [get]
+// @Router 		/api/workflow-instances/{id} [get]
 func (h *WorkflowInstancesHandlers) getByID(ctx *gin.Context) {
 	id := ctx.Param("id")
 	def, err := h.service.GetByID(id)
