# engine/internal/models/workflow_step_definition.go
@@ -20,60 +20,61 @@ const (
 )
 
 type WorkflowStepDefinition struct {
-	StepDefinitionID string                   `json:"stepDefinitionId"`
-	Name             string                   `json:"name"`
-	Description      string                   `json:"description"`
-	Parameters       StepDefinitionParameters `json:"parameters"`
-	Metadata         utils.UnknownJson        `json:"metadata,omitempty"`
-	Type             StepType                 `json:"type"`
-	TaskConfig       *TaskConfig              `json:"taskConfig,omitempty"`
-	WorkflowConfig   *WorkflowConfig          `json:"workflowConfig,omitempty"`
-	WaitConfig       *WaitConfig              `json:"waitConfig,omitempty"`
-	DecisionConfig   *DecisionConfig          `json:"decisionConfig,omitempty"`
-	ForkConfig       *ForkConfig              `json:"forkConfig,omitempty"`
-	JoinConfig       *JoinConfig              `json:"joinConfig,omitempty"`
+	StepDefinitionID string                    `json:"stepDefinitionId" validate:"required"`
+	Name             string                    `json:"name" validate:"required"`
+	Description      string                    `json:"description"`
+	Parameters       *StepDefinitionParameters `json:"parameters"`
+	Metadata         utils.UnknownJson         `json:"metadata,omitempty"`
+	Type             StepType                  `json:"type" validate:"required"`
+	TaskConfig       *TaskConfig               `json:"taskConfig,omitempty"`
+	WorkflowConfig   *WorkflowConfig           `json:"workflowConfig,omitempty"`
+	WaitConfig       *WaitConfig               `json:"waitConfig,omitempty"`
+	DecisionConfig   *DecisionConfig           `json:"decisionConfig,omitempty"`
+	ForkConfig       *ForkConfig               `json:"forkConfig,omitempty"`
+	JoinConfig       *JoinConfig               `json:"joinConfig,omitempty"`
 } // @name WorkflowStepDefinition
 
 type TaskConfig struct {
-	TaskDefinitionID string  `json:"taskDefinitionId"`
+	TaskDefinitionID string  `json:"taskDefinitionId" validate:"required"`
 	NextStepID       *string `json:"nextStepId"`
 } // @name TaskConfig
 
 type WorkflowConfig struct {
-	WorkflowDefinitionID string  `json:"workflowDefinitionId"`
+	WorkflowDefinitionID string  `json:"workflowDefinitionId" validate:"required"`
 	NextStepID           *string `json:"nextStepId"`
 } // @name WorkflowConfig
 
 type WaitConfig struct {
-	DurationSeconds StepDefinitionParameter `json:"durationSeconds"`
+	DurationSeconds StepDefinitionParameter `json:"durationSeconds" validate:"required"`
 	NextStepID      *string                 `json:"nextStepId"`
 } // @name WaitConfig
 
 type JoinConfig struct {
-	IncomingStepIDs []string `json:"incomingStepIds"`
+	IncomingStepIDs []string `json:"incomingStepIds" validate:"required"`
 	NextStepID      *string  `json:"nextStepId"`
 } // @name JoinConfig
 
 type ForkBranch struct {
 	Name        *string `json:"name"`
 	Description *string `json:"description"`
-	NextStepID  string  `json:"nextStepId"`
+	NextStepID  string  `json:"nextStepId" validate:"required"`
 } // @name ForkBranch
 
 type ForkConfig struct {
-	JoinStepID string       `json:"joinStepId"`
-	Branches   []ForkBranch `json:"branches"`
+	JoinStepID string       `json:"joinStepId" validate:"required"`
+	Branches   []ForkBranch `json:"branches" validate:"required"`
 } // @name ForkConfig
 
 type DecisionCase struct {
 	Name        *string `json:"name"`
 	Description *string `json:"description"`
-	Condition   string  `json:"condition"`
-	NextStepID  string  `json:"nextStepId"`
+	Condition   string  `json:"condition" validate:"required"`
+	NextStepID  string  `json:"nextStepId" validate:"required"`
 } // @name DecisionCase
 
 type DecisionConfig struct {
-	Cases []DecisionCase `json:"cases"`
+	JoinStepID string         `json:"joinStepId" validate:"required"`
+	Cases      []DecisionCase `json:"cases" validate:"required"`
 } // @name DecisionConfig
 
 type WorkflowStepDefinitionList []WorkflowStepDefinition // @name WorkflowStepDefinitionList
